updating sample embed links

--- a/sample-embed.html
+++ b/sample-embed.html
@@ -75,11 +75,11 @@
           <h1>Sample Embeds</h1>
         </div>
         <p class="lead">640x500</p>
-        <p><iframe width="640" height="500" frameBorder="0" src="http://developmentseed.org/unhcr-emergencies/#/?embed"></iframe></p>
-        <p><pre>&lt;iframe&gt; width="640" height="500" frameBorder="0" src="http://developmentseed.org/unhcr-emergencies/#/?embed">&lt;/iframe&gt;</pre></p>
+        <p><iframe width="640" height="500" frameBorder="0" src="http://unhcr.github.com/global-emergencies/#/?embed"></iframe></p>
+        <p><pre>&lt;iframe&gt; width="640" height="500" frameBorder="0" src="http://unhcr.github.com/global-emergencies/#/?embed">&lt;/iframe&gt;</pre></p>
         <p class="lead">600x400</p>
-        <p><iframe width="600" height="400" frameBorder="0" src="http://developmentseed.org/unhcr-emergencies/#/?embed"></iframe></p>
-        <p><pre>&lt;iframe&gt; width="600" height="400" frameBorder="0" src="http://developmentseed.org/unhcr-emergencies/#/?embed">&lt;/iframe&gt;</pre></p>
+        <p><iframe width="600" height="400" frameBorder="0" src="http://unhcr.github.com/global-emergencies/#/?embed"></iframe></p>
+        <p><pre>&lt;iframe&gt; width="600" height="400" frameBorder="0" src="http://unhcr.github.com/global-emergencies/#/?embed">&lt;/iframe&gt;</pre></p>
         
       </div>
 
