--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Sets up navigation on upper right -->  
     <div id='nav'>
       <ul>
-        <li><a href='http://data.unhcr.org/portfolio/'>Portfolio</a></li>
+        <li><a href='http://data.unhcr.org/portfolio/' target="_blank">Portfolio</a></li>
         <li id='sit'><a href='#'>Information Portals</a></li>
       </ul>
     </div>
@@ -66,7 +66,7 @@
     <div id='s5'>
       <h2>Finances Needed to Assist</h2>
       <p>Support is needed to continue to provide assistance to those in need. Currently, the total need to respond effectively is unfulfilled. Underfunding continues to delay response and put lives at risk.</p>
-    <div class='fund'><a href='http://donate.unhcr.org/'>Donate Now</a></div>
+    <div class='fund'><a href='http://donate.unhcr.org/' target="_blank">Donate Now</a></div>
     </div>
     <div id='s6'>
       <h2>Access more Information</h2>
