--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <!-- Top navigation below UNHCR header -->  
   <div id='sections'>
     <a class='active' href='#' data-value='1 2' data-type='emergencies'>Emergencies</a>
-    <a href='#' data-value='3 4' data-type='response'>Assistance</a>
-    <a href='#' data-value='5 6' data-type='information'>Information</a>
+    <a href='#' data-value='3 4 5' data-type='response'>Assistance</a>
+    <a href='#' data-value='6' data-type='information'>Information</a>
   </div>
   <div id='sitnav'>
     <ul></ul>
