--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div id='s6'>
       <h2>Access more Information</h2>
-      <p>Explore more about UNHCR's emergency response and the current situation on the ground, access the information sharing portals.</p>
+      <p>Explore more about UNHCR's response to the current emergencies and others protracted refugee crisis. Access the information sharing portals.</p>
     </div>
   </div>
 
