--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset='utf-8' />
   <title>UNHCR - Emergencies</title>
   <link href='css/reset.css' rel='stylesheet' type='text/css' />
-  <link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css' rel='stylesheet' type='text/css' />
+  <link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.8-dev/mapbox.css' rel='stylesheet' type='text/css' />
   <link href='css/style.css' rel='stylesheet' type='text/css' />
   <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   <link href="http://www.unhcr.org/favicon.ico" rel="icon" type="image/x-icon">
   <script src='js/jquery.min.js' type='text/javascript'></script>
-  <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js' type='text/javascript'></script>
+  <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.8-dev/mapbox.js' type='text/javascript'></script>
   <script src='js/share.js' type='text/javascript'></script>
   <script src='js/site.js' type='text/javascript'></script>
 </head>
