--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div id='story'>
     <div id='s1'>
       <h2>Complex Crises</h2>
-      <p>Thousands of people everyday are facing life-threatening situations. UNHCR is currently responding to major conflicts and provided life-saving assistance to those in need.</p>
+      <p>Thousands of people everyday are facing life-threatening situations. UNHCR and Partners are currently responding to major conflicts and provided life-saving assistance to those in need.</p>
       <p>Explore more about the current situations.</p>
     </div>
     <div id='s2'>
@@ -70,7 +70,7 @@
     </div>
     <div id='s6'>
       <h2>Access more Information</h2>
-      <p>Explore more about UNHCR's response to the current emergencies and others protracted refugee crisis. Access the information sharing portals.</p>
+      <p>Explore more about UNHCR and partners’ response to the current emergencies and others protracted refugee crisis. Access the information sharing portals.</p>
     </div>
   </div>
 
