--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div id='s6'>
       <h2>Access more Information</h2>
-      <p>Explore more about UNHCR and partners’ response to the current emergencies and others protracted refugee crisis. Access the information sharing portals.</p>
+      <p>Explore more about UNHCR and partners’ response to the current emergencies and other protracted refugee crises. Access the information sharing portals.</p>
     </div>
   </div>
 
